--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="director">Режиссёр:</string>
     <string name="actors_name">Actors Name</string>
     <string name="characters_name">Characters Name</string>
+    <string name="partInPerf">Участие в спектаклях</string>
 
 
 </resources>
