--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="phone_number_2">\"(093) 487-84-16\"</string>
     <string name="web">http://tea-atr.com/</string>
     <string name="email">info@tea-atr.com</string>
+    <string name="question_and_order">Справки и заказ билетов</string>
 
 
 </resources>
