Add photos gallery and small fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="web">http://tea-atr.com/</string>
     <string name="email">info@tea-atr.com</string>
     <string name="question_and_order">Справки и заказ билетов</string>
+    <string name="Photos">Фотографии</string>
+    <string name="perf_director">Режиссёр: </string>
 
 
 </resources>
